# Python_Labs

./: README.md  pyproject.toml
lab_1/: README.md  constants.py  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
lab_2/: README.md  filtered_output.txt  task_1.py  task_2.py  task_3.py
lab_3/: task.py  users.db
pz_1/: REDME.md  task.py
pz_2/: REDME.md  task.py
pz_3/: README.md  security_events.db  task.py
